--- a/BAHIATOYS/index.html
+++ b/BAHIATOYS/index.html
@@ -73,8 +73,8 @@
 
     <section class="menu" id="menu">
         <div class="center-text">
-            <h3>Food Menu</h3>
-            <h2>Delicious Food</h2>
+            <h3>BRINQUEDOS</h3>
+            <h2>Disponíveis</h2>
         </div>
 
         <div class="menu-content">
@@ -87,7 +87,8 @@
                     <div class="box-text">
                         <h4>Corn-Shrimp</h4>
                         <p>Whales and darkness moving for casttle.</p>
-                        <h6>$32</h6>
+                        <h6>$199,99</h6>
+                        <a href="#" class="btn-cards">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -101,7 +102,8 @@
                     <div class="box-text">
                         <h4>Corn-Shrimp</h4>
                         <p>Whales and darkness moving for casttle.</p>
-                        <h6>$32</h6>
+                        <h6>$239,99</h6>
+                        <a href="#" class="btn-cards">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +117,8 @@
                     <div class="box-text">
                         <h4>Corn-Shrimp</h4>
                         <p>Whales and darkness moving for casttle.</p>
-                        <h6>$32</h6>
+                        <h6>$249,99</h6>
+                        <a href="#" class="btn-cards">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +132,8 @@
                     <div class="box-text">
                         <h4>Corn-Shrimp</h4>
                         <p>Whales and darkness moving for casttle.</p>
-                        <h6>$32</h6>
+                        <h6>$249,99</h6>
+                        <a href="#" class="btn-cards">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +147,8 @@
                     <div class="box-text">
                         <h4>Corn-Shrimp</h4>
                         <p>Whales and darkness moving for casttle.</p>
-                        <h6>$32</h6>
+                        <h6>$329,99</h6>
+                        <a href="#" class="btn-cards">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +162,8 @@
                     <div class="box-text">
                         <h4>Corn-Shrimp</h4>
                         <p>Whales and darkness moving for casttle.</p>
-                        <h6>$32</h6>
+                        <h6>$429,99</h6>
+                        <a href="#" class="btn-cards">COMPRAR</a>
                     </div>
                 </div>
             </div>
